[package]
name = "yuv"
version = "0.1.7"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["multimedia::encoding"]
description = "Conversion between various YUV (YCbCr) formats and RGB"
edition = "2021"
homepage = "https://lib.rs/crates/yuv"
include = ["/Cargo.toml", "/README.md", "/src/*.rs", "LICENSE"]
keywords = ["ycbcr", "rec709", "bt601", "color", "rgb"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/kornelski/yuv.git"

[dependencies]
num-traits = "0.2.14"
rgb = "0.8.41"


[features]
default = ["std"]
# deprecated, disable std instead
no_std = []
# disable for no_std support. Requires 1.81
std = []
